src/app/hobbies/components/add-new-hobby/add-new-hobby.component.scss
.inner_div {
    border: 1px solid var(--dark-pink-color);
    border-radius: 5px;
    margin: 10px;
    padding: 10px;
    background-color: var(--mid-light-pink-color);
    max-width: 600px;
}

.mat-input-element {
    width: 100% !important;
}

.outside_div{
    display: flex;
    justify-content: center;
    align-items: center;
}

h2{
    font-weight: bold;
    text-align: center;
}

button{
    margin: 10px;
    float: right;
}

